--- a/Spotify/Spotify.vcxproj
+++ b/Spotify/Spotify.vcxproj
@@ -148,10 +148,11 @@
     <ClInclude Include="AdministradorCancion.h" />
     <ClInclude Include="AdministradorCompartirCancion.h" />
     <ClInclude Include="AdministradorDatosValoracion.h" />
-    <ClInclude Include="AdministradorEnlaceFavorito.h" />
+    <ClInclude Include="GeneradorEnlaceFavorito.h" />
     <ClInclude Include="AdministradorPodcast.h" />
     <ClInclude Include="Cancion.h" />
     <ClInclude Include="CompartirCancionOrdenado.h" />
+    <ClInclude Include="Creditos.h" />
     <ClInclude Include="GuiaUsuario.h" />
     <ClInclude Include="ListaReproduccion.h" />
     <ClInclude Include="PodcastOrdenado.h" />
